k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongo
  namespace: jobportal

spec:
  serviceName: mongo-service

  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:

      - name: mongo

        image: mongo:latest

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db

  volumeClaimTemplates:

  - metadata:
      name: mongo-storage

    spec:

      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 2Gi
