k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jobportal-ingress
  namespace: jobportal

spec:
  ingressClassName: nginx

  rules:

  - host: jobportal.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:
            name: frontend-service

            port:
              number: 80
